--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,10 @@ edition = "2021"
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
+
+[dependencies]
+axum = "0.7.5"
+shuttle-axum = "0.47.0"
+shuttle-runtime = "0.47.0"
+tokio = "1.40.0"
 # unused = "allow" # For experimental dev.
